2014-02-28  Alexandre Oliva <aoliva@redhat.com>

	PR debug/59992
	* cselib.c (remove_useless_values): Skip to avoid quadratic
	behavior if the condition moved from...
	(cselib_process_insn): ... here holds.

2014-02-28  Alexandre Oliva <aoliva@redhat.com>

	PR debug/57232
	* var-tracking.c (vt_initialize): Apply the same condition to
	preserve the CFA base value.

2014-02-28  Joey Ye  <joey.ye@arm.com>

	PR target/PR60169
	* config/arm/arm.c (thumb_far_jump_used_p): Don't change
	if reload in progress or completed.

2014-02-28  Tobias Burnus  <burnus@net-b.de>

	PR middle-end/60147
	* tree-pretty-print.c (dump_generic_node, print_declaration): Handle
	NAMELIST_DECL.

2014-02-27  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/tm.texi.in (Condition Code Status): Update documention for
	relative locations of cc0-setter and cc0-user.

2014-02-27  Jeff Law  <law@redhat.com>

	PR rtl-optimization/52714
	* combine.c (try_combine): When splitting an unrecognized PARALLEL
	into two independent simple sets, if I3 is a jump, ensure the
	pattern we place into I3 is a (set (pc) ...)

2014-02-27  Mikael Pettersson  <mikpe@it.uu.se>
	    Jeff Law  <law@redhat.com>

	PR rtl-optimization/49847
	* cse.c (fold_rtx) Handle case where cc0 setter and cc0 user
	are in different blocks.
	* doc/tm.texi (Condition Code Status): Update documention for
	relative locations of cc0-setter and cc0-user.

2014-02-27  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/59222
	* lra.c (lra_emit_add): Check SUBREG too.

2014-02-27  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.c (m68k_option_override): Disable
	-flive-range-shrinkage for classic m68k.
	(m68k_override_options_after_change): Likewise.

2014-02-27  Marek Polacek  <polacek@redhat.com>

	PR middle-end/59223
	* tree-ssa-uninit.c (gate_warn_uninitialized): Run the pass even for
	-Wmaybe-uninitialized.

2014-02-27  Alan Modra  <amodra@gmail.com>

	PR target/57936
	* reload1.c (emit_input_reload_insns): When reload_override_in,